product_docs/docs/pem/10/pem_rest_api/v7/object.mdx
---
navTitle: Object
pdfExclude: true
title: 'EDB Postgres Enterprise Manager REST APIs v7.0: Object'
description: >-
  Object can be a pem-agent, a monitored server, or a database object (that is,
  a database, schema, table, index, sequence, function, or view).

---



Object can be a pem-agent, a monitored server, or a database object (that is, a database, schema, table, index, sequence, function, or view).

## `get__agent_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/agent/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/agent/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/agent/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /agent/`

*Retrieve the pem-agent information.*

Returns a list of information and status for the pem-agents visible to the user (represented by the token).

<span id="get__agent_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description                      |
| ------------ | ------ | ------ | -------- | -------------------------------- |
| X-Auth-Token | header | string | true     | Token for authentication purpose |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "id": 0,
    "name": "string",
    "version": "string",
    "active": true,
    "heartbeat_int": 0,
    "alert_blackout": true,
    "owner": "string",
    "team": "string",
    "gid": 0,
    "ignore_mnt_points": [
      "string"
    ]
  }
]
```

</Details>

<span id="get__agent_-responses"></span>

### Responses



| Status | Meaning                                                 | Description                                                    | Schema                            |
| ------ | ------------------------------------------------------- | -------------------------------------------------------------- | --------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Returns a list of information and status about the pem-agents. | [Agents](schemas.mdx#tocs_agents) |

!!! info

    This operation does not require authentication




## `get__agent_{agent_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /agent/{agent_id}`

*Retrieve information for an agent, identified by the agent_id.*

<span id="get__agent_{agent_id}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| agent_id     | path   | integer | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "id": 0,
  "name": "string",
  "version": "string",
  "active": true,
  "heartbeat_int": 0,
  "alert_blackout": true,
  "owner": "string",
  "team": "string",
  "gid": 0,
  "ignore_mnt_points": [
    "string"
  ]
}
```

</Details>

<span id="get__agent_{agent_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description         | Schema                          |
| ------ | ------------------------------------------------------- | ------------------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Successful response | [Agent](schemas.mdx#tocs_agent) |

!!! info

    This operation does not require authentication




## `put__agent_{agent_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X PUT https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id} \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.put('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "name": "string",
  "heartbeat_int": 0,
  "alert_blackout": true,
  "team": "string",
  "ignore_mnt_points": [
    "string"
  ]
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}',
{
  method: 'PUT',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`PUT /agent/{agent_id}`

*Update agent information.*

**Body parameter**

```json
{
  "name": "string",
  "heartbeat_int": 0,
  "alert_blackout": true,
  "team": "string",
  "ignore_mnt_points": [
    "string"
  ]
}
```

<span id="put__agent_{agent_id}-parameters"></span>

### Parameters



| Name         | In     | Type                                    | Required | Description            |
| ------------ | ------ | --------------------------------------- | -------- | ---------------------- |
| agent_id     | path   | integer                                 | true     | none                   |
| X-Auth-Token | header | string                                  | true     | Token of authorization |
| body         | body   | [AgentBody](schemas.mdx#tocs_agentbody) | true     | none                   |

**Example responses**

<span id="put__agent_{agent_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description          | Schema |
| ------ | ------------------------------------------------------- | -------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Updated successfully | None   |

<span id="put__agent_{agent_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `delete__agent_{agent_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X DELETE https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id} \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'X-Auth-Token': 'string'
}

r = requests.delete('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/agent/{agent_id}',
{
  method: 'DELETE',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`DELETE /agent/{agent_id}`

*Stop managing the agent by PEM.*

<span id="delete__agent_{agent_id}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| agent_id     | path   | integer | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<span id="delete__agent_{agent_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

<span id="delete__agent_{agent_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/`

*Retrieval of the managed server list*

<span id="get__server_-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "id": 0,
    "name": "string",
    "host": "string",
    "port": 0,
    "database": "string",
    "ssl": 0,
    "serviceid": "string",
    "active": true,
    "alert_blackout": true,
    "owner": 0,
    "team": "string",
    "server_owner": "string",
    "is_remote_monitoring": true,
    "efm_cluster_name": "string",
    "efm_service_name": "string",
    "efm_installation_path": "string",
    "comment": "string",
    "username": "string",
    "gid": 0,
    "db_restriction": "string",
    "role": "string",
    "is_edb": true,
    "agent_id": 0,
    "asb_host": "string",
    "asb_port": 0,
    "asb_username": "string",
    "asb_database": "string",
    "asb_sslmode": "prefer",
    "asb_password": "string",
    "agent_allowtakeover": false,
    "agent_capability_list": [
      "string"
    ],
    "agent_description": "string",
    "fgcolor": "#000000",
    "bgcolor": "#FFFFFF",
    "sslcompression": false,
    "use_ssh_tunnel": false,
    "tunnel_host": "string",
    "tunnel_port": 22,
    "tunnel_username": "string",
    "tunnel_password": "string",
    "tunnel_authentication": false,
    "tunnel_identity_file": "string"
  }
]
```

</Details>

<span id="get__server_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_-responseschema"></span>

### Response Schema



Status Code **200**

| Name                    | Type                                 | Required | Restrictions | Description                                                                                                                                             |
| ----------------------- | ------------------------------------ | -------- | ------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
| *anonymous*             | \[[Server](schemas.mdx#tocs_server)] | false    | none         | none                                                                                                                                                    |
| » id                    | integer                              | false    | none         | Server ID.NOTE: This property is not applicable for a POST request.                                                                                     |
| » name                  | string                               | false    | none         | Server name                                                                                                                                             |
| » host                  | string                               | false    | none         | Server host                                                                                                                                             |
| » port                  | integer                              | false    | none         | Server port                                                                                                                                             |
| » database              | string                               | false    | none         | Maintenance databse                                                                                                                                     |
| » ssl                   | integer                              | false    | none         | SSL mode                                                                                                                                                |
| » serviceid             | string                               | false    | none         | Server service ID                                                                                                                                       |
| » active                | boolean                              | false    | none         | Determines whether the server is active.                                                                                                                |
| » alert_blackout        | boolean                              | false    | none         | Determines whether the alerts on the server are blacked out.                                                                                            |
| » owner                 | integer                              | false    | none         | ID of the owner who registered the server with PEM.                                                                                                     |
| » team                  | string                               | false    | none         | Defines the role/username who can see server information.                                                                                               |
| » server_owner          | string                               | false    | none         | Name of the user who registered the server on the PEM database server.                                                                                  |
| » is_remote_monitoring  | boolean                              | false    | none         | Determines whether this server is being monitored remotely (that is, the monitoring pemAgent does not reside on the same host as the monitored server). |
| » efm_cluster_name      | string                               | false    | none         | Cluster name of EFM                                                                                                                                     |
| » efm_service_name      | string                               | false    | none         | Service name of EFM                                                                                                                                     |
| » efm_installation_path | string                               | false    | none         | Installation path of EFM                                                                                                                                |
| » comment               | string                               | false    | none         | Description of the server                                                                                                                               |
| » username              | string                               | false    | none         | Username for connecting the database server                                                                                                             |
| » gid                   | integer                              | false    | none         | ID of the server group                                                                                                                                  |
| » db_restriction        | string                               | false    | none         | Database restriction SQL clause                                                                                                                         |
| » role                  | string                               | false    | none         | The role the connection will use                                                                                                                        |
| » is_edb                | boolean                              | false    | none         | Is server an EDB Advanced Server?                                                                                                                       |
| » agent_id              | integer                              | false    | none         | Agent ID bound to the server                                                                                                                            |
| » asb_host              | string                               | false    | none         | PEM database host used by agent while creating PEM connection                                                                                           |
| » asb_port              | integer                              | false    | none         | PEM database port used by agent while creating PEM connection                                                                                           |
| » asb_username          | string                               | false    | none         | PEM database user name used by agent while creating PEM connection                                                                                      |
| » asb_database          | string                               | false    | none         | PEM database to which agent will connect                                                                                                                |
| » asb_sslmode           | string                               | false    | none         | PEM database SSL mode                                                                                                                                   |
| » asb_password          | string                               | false    | none         | empty string                                                                                                                                            |
| » agent_allowtakeover   | boolean                              | false    | none         | Specifies whether the server can be taken over by another agent.                                                                                        |
| » agent_capability_list | [string]                             | false    | none         | Array of agent capabilities                                                                                                                             |
| » agent_description     | string                               | false    | none         | Agent description                                                                                                                                       |
| » fgcolor               | string                               | false    | none         | Foreground color of server node in browser tree. Default is black( #000000)                                                                             |
| » bgcolor               | string                               | false    | none         | Background color of server node in browser tree. Default is white( #FFFFFF)                                                                             |
| » sslcompression        | boolean                              | false    | none         | Determines whether data sent over SSL should be compressed.                                                                                             |
| » use_ssh_tunnel        | boolean                              | false    | none         | Determines whether to use ssh tunnel.                                                                                                                   |
| » tunnel_host           | string                               | false    | none         | Tunnel host name                                                                                                                                        |
| » tunnel_port           | integer                              | false    | none         | Tunnel port number                                                                                                                                      |
| » tunnel_username       | string                               | false    | none         | Tunnel username                                                                                                                                         |
| » tunnel_password       | string                               | false    | none         | Tunnel password                                                                                                                                         |
| » tunnel_authentication | boolean                              | false    | none         | Determines whether to use tunnel authentication.                                                                                                        |
| » tunnel_identity_file  | string                               | false    | none         | Tunnel identity file used for authentication.                                                                                                           |

##### Enumerated Values

| Property    | Value       |
| ----------- | ----------- |
| asb_sslmode | prefer      |
| asb_sslmode | allow       |
| asb_sslmode | disable     |
| asb_sslmode | require     |
| asb_sslmode | verify-ca   |
| asb_sslmode | verify-full |

!!! info

    This operation does not require authentication




## `post__server_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X POST https://PEM-SERVER-IP/pem/api/v7/server/ \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.post('https://PEM-SERVER-IP/pem/api/v7/server/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "team": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "hostaddr": "string",
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "prefer",
  "asb_password": "string",
  "agent_allowtakeover": false,
  "agent_description": "string",
  "fgcolor": "#000000",
  "bgcolor": "#FFFFFF",
  "sslcompression": false,
  "use_ssh_tunnel": false,
  "tunnel_host": "string",
  "tunnel_port": 22,
  "tunnel_username": "string",
  "tunnel_password": "string",
  "tunnel_authentication": false,
  "tunnel_identity_file": "string"
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/',
{
  method: 'POST',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`POST /server/`

*Add a new managed database server.*

**Body parameter**

```json
{
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "team": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "hostaddr": "string",
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "prefer",
  "asb_password": "string",
  "agent_allowtakeover": false,
  "agent_description": "string",
  "fgcolor": "#000000",
  "bgcolor": "#FFFFFF",
  "sslcompression": false,
  "use_ssh_tunnel": false,
  "tunnel_host": "string",
  "tunnel_port": 22,
  "tunnel_username": "string",
  "tunnel_password": "string",
  "tunnel_authentication": false,
  "tunnel_identity_file": "string"
}
```

<span id="post__server_-parameters"></span>

### Parameters



| Name         | In     | Type                                      | Required | Description            |
| ------------ | ------ | ----------------------------------------- | -------- | ---------------------- |
| X-Auth-Token | header | string                                    | true     | Token of authorization |
| body         | body   | [ServerBody](schemas.mdx#tocs_serverbody) | true     | none                   |

**Example responses**

<span id="post__server_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

<span id="post__server_-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{server_id} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{server_id}`

*Retrieve the information for the server, identified by the server_id.*

<span id="get__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| server_id    | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "id": 0,
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "owner": 0,
  "team": "string",
  "server_owner": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "prefer",
  "asb_password": "string",
  "agent_allowtakeover": false,
  "agent_capability_list": [
    "string"
  ],
  "agent_description": "string",
  "fgcolor": "#000000",
  "bgcolor": "#FFFFFF",
  "sslcompression": false,
  "use_ssh_tunnel": false,
  "tunnel_host": "string",
  "tunnel_port": 22,
  "tunnel_username": "string",
  "tunnel_password": "string",
  "tunnel_authentication": false,
  "tunnel_identity_file": "string"
}
```

</Details>

<span id="get__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description          | Schema                            |
| ------ | ------------------------------------------------------- | -------------------- | --------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Created successfully | [Server](schemas.mdx#tocs_server) |

!!! info

    This operation does not require authentication




## `put__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X PUT https://PEM-SERVER-IP/pem/api/v7/server/{server_id} \
  -H 'Content-Type: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Content-Type': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.put('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript
const inputBody = '{
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "team": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "hostaddr": "string",
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "prefer",
  "asb_password": "string",
  "agent_allowtakeover": false,
  "agent_description": "string",
  "fgcolor": "#000000",
  "bgcolor": "#FFFFFF",
  "sslcompression": false,
  "use_ssh_tunnel": false,
  "tunnel_host": "string",
  "tunnel_port": 22,
  "tunnel_username": "string",
  "tunnel_password": "string",
  "tunnel_authentication": false,
  "tunnel_identity_file": "string"
}';
const headers = {
  'Content-Type':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}',
{
  method: 'PUT',
  body: inputBody,
  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`PUT /server/{server_id}`

*Update the server information.*

**Body parameter**

```json
{
  "name": "string",
  "host": "string",
  "port": 0,
  "database": "string",
  "ssl": 0,
  "serviceid": "string",
  "active": true,
  "alert_blackout": true,
  "team": "string",
  "is_remote_monitoring": true,
  "efm_cluster_name": "string",
  "efm_service_name": "string",
  "efm_installation_path": "string",
  "comment": "string",
  "username": "string",
  "gid": 0,
  "hostaddr": "string",
  "db_restriction": "string",
  "role": "string",
  "is_edb": true,
  "agent_id": 0,
  "asb_host": "string",
  "asb_port": 0,
  "asb_username": "string",
  "asb_database": "string",
  "asb_sslmode": "prefer",
  "asb_password": "string",
  "agent_allowtakeover": false,
  "agent_description": "string",
  "fgcolor": "#000000",
  "bgcolor": "#FFFFFF",
  "sslcompression": false,
  "use_ssh_tunnel": false,
  "tunnel_host": "string",
  "tunnel_port": 22,
  "tunnel_username": "string",
  "tunnel_password": "string",
  "tunnel_authentication": false,
  "tunnel_identity_file": "string"
}
```

<span id="put__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type                                      | Required | Description            |
| ------------ | ------ | ----------------------------------------- | -------- | ---------------------- |
| server_id    | path   | string                                    | true     | none                   |
| X-Auth-Token | header | string                                    | true     | Token of authorization |
| body         | body   | [ServerBody](schemas.mdx#tocs_serverbody) | true     | none                   |

**Example responses**

<span id="put__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description           | Schema |
| ------ | ------------------------------------------------------- | --------------------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Updated successfully. | None   |

<span id="put__server_{server_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `delete__server_{server_id}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X DELETE https://PEM-SERVER-IP/pem/api/v7/server/{server_id} \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'X-Auth-Token': 'string'
}

r = requests.delete('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{server_id}',
{
  method: 'DELETE',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`DELETE /server/{server_id}`

*Stop managing the server by PEM.*

<span id="delete__server_{server_id}-parameters"></span>

### Parameters



| Name         | In     | Type   | Required | Description            |
| ------------ | ------ | ------ | -------- | ---------------------- |
| server_id    | path   | string | true     | none                   |
| X-Auth-Token | header | string | true     | Token of authorization |

**Example responses**

<span id="delete__server_{server_id}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | None   |

<span id="delete__server_{server_id}-responseschema"></span>

### Response Schema



!!! info

    This operation does not require authentication




## `get__server_{sid}_database_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/`

*Retrieve the list of properties of database(s) for a managed server.*

<span id="get__server_{sid}_database_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| X-Auth-Token | header | string  | true     | Token of authorization |
| sid          | path   | integer | true     | Server ID              |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "database_name": "string",
    "connections_allowed": true,
    "system_database": true,
    "recorded_time": "2019-08-24T14:15:22Z",
    "encoding": "string",
    "server_id": 0
  }
]
```

</Details>

<span id="get__server_{sid}_database_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_-responseschema"></span>

### Response Schema



Status Code **200**

| Name                  | Type                                     | Required | Restrictions | Description                                                      |
| --------------------- | ---------------------------------------- | -------- | ------------ | ---------------------------------------------------------------- |
| *anonymous*           | \[[Database](schemas.mdx#tocs_database)] | false    | none         | none                                                             |
| » database_name       | string                                   | false    | none         | Database name                                                    |
| » connections_allowed | boolean                                  | false    | none         | Determines whether a connection to the database is allowed.      |
| » system_database     | boolean                                  | false    | none         | Determines whether the database is a system database.            |
| » recorded_time       | string(date-time)                        | false    | none         | Specifies when the database was first detected by the PEM agent. |
| » encoding            | string                                   | false    | none         | Database encoding                                                |
| » server_id           | integer                                  | false    | none         | Server ID of database                                            |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}`

*Retrieve the properties of a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "database_name": "string",
  "connections_allowed": true,
  "system_database": true,
  "recorded_time": "2019-08-24T14:15:22Z",
  "encoding": "string",
  "server_id": 0
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Database](schemas.mdx#tocs_database) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/`

*Retrieve the list of properties of schema(s) for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                                 | Required | Restrictions | Description                                            |
| --------------- | ------------------------------------ | -------- | ------------ | ------------------------------------------------------ |
| *anonymous*     | \[[Schema](schemas.mdx#tocs_schema)] | false    | none         | none                                                   |
| » schema_name   | string                               | false    | none         | Schema name                                            |
| » database_name | string                               | false    | none         | Database name of schema                                |
| » server_id     | integer                              | false    | none         | Server ID schema                                       |
| » recorded_time | string(date-time)                    | false    | none         | Specifies when schema was first detected by PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}`

*Retrieve the properties of schema(s) for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                            |
| ------ | ------------------------------------------------------- | ----------- | --------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Schema](schemas.mdx#tocs_schema) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_table_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/table/`

*Retrieve the list of properties of tables residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_table_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "table_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "has_primary_key": true,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_table_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_table_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                               | Required | Restrictions | Description                                               |
| ----------------- | ---------------------------------- | -------- | ------------ | --------------------------------------------------------- |
| *anonymous*       | \[[Table](schemas.mdx#tocs_table)] | false    | none         | none                                                      |
| » table_name      | string                             | false    | none         | Table name                                                |
| » schema_name     | string                             | false    | none         | Schema name                                               |
| » database_name   | string                             | false    | none         | Database name                                             |
| » server_id       | integer                            | false    | none         | Server ID                                                 |
| » has_primary_key | boolean                            | false    | none         | Determines whether table has a primary key.               |
| » recorded_time   | string                             | false    | none         | Specifies when table was first detected by the PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_table_{table_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/{table_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/{table_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/table/{table_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/table/{table_name}`

*Retrieve the properties of tables residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_table_{table_name}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| table_name   | path   | string  | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "table_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "has_primary_key": true,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_table_{table_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                          |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Table](schemas.mdx#tocs_table) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_index_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/index/`

*Retrieve the list of properties of indexes residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_index_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "index_name": "string",
    "ind_keys": [
      0
    ],
    "table_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_index_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_index_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                               | Required | Restrictions | Description                                           |
| --------------- | ---------------------------------- | -------- | ------------ | ----------------------------------------------------- |
| *anonymous*     | \[[Index](schemas.mdx#tocs_index)] | false    | none         | none                                                  |
| » index_name    | string                             | false    | none         | Index name                                            |
| » ind_keys      | [integer]                          | false    | none         | Indexed column positions in table                     |
| » table_name    | string                             | false    | none         | Table name                                            |
| » schema_name   | string                             | false    | none         | Schema                                                |
| » database_name | string                             | false    | none         | Database name                                         |
| » server_id     | integer                            | false    | none         | Server ID                                             |
| » recorded_time | string                             | false    | none         | Specifies when index was first detected by PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_index_{index_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/{index_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/{index_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/index/{index_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/index/{index_name}`

*Retrieve the properties of indexes residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_index_{index_name}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| index_name   | path   | string  | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "index_name": "string",
  "ind_keys": [
    0
  ],
  "table_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_index_{index_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                          |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Index](schemas.mdx#tocs_index) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/sequence/`

*Retrieve the list of properties of sequences residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "sequence_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_-responseschema"></span>

### Response Schema



Status Code **200**

| Name            | Type                                     | Required | Restrictions | Description                                              |
| --------------- | ---------------------------------------- | -------- | ------------ | -------------------------------------------------------- |
| *anonymous*     | \[[Sequence](schemas.mdx#tocs_sequence)] | false    | none         | none                                                     |
| » sequence_name | string                                   | false    | none         | Sequence name                                            |
| » schema_name   | string                                   | false    | none         | Schema name                                              |
| » database_name | string                                   | false    | none         | Database name                                            |
| » server_id     | integer                                  | false    | none         | Server ID                                                |
| » recorded_time | string(date-time)                        | false    | none         | Specifies when sequence was first detected by PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_{sequence_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/{sequence_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/{sequence_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/sequence/{sequence_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/sequence/{sequence_name}`

*Retrieve the properties of sequences residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_{sequence_name}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description            |
| ------------- | ------ | ------- | -------- | ---------------------- |
| sid           | path   | integer | true     | Server ID              |
| db_name       | path   | string  | true     | Database name          |
| schema_name   | path   | string  | true     | Schema name            |
| sequence_name | path   | string  | true     | none                   |
| X-Auth-Token  | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "sequence_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_sequence_{sequence_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Sequence](schemas.mdx#tocs_sequence) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_view_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/view/`

*Retrieve the list of properties of views residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_view_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "view_name": "string",
    "view_type": "string",
    "ispopulated": true,
    "view_owner": "string",
    "definition": "string",
    "tablespace_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "string"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_view_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_view_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                             | Required | Restrictions | Description                                          |
| ----------------- | -------------------------------- | -------- | ------------ | ---------------------------------------------------- |
| *anonymous*       | \[[View](schemas.mdx#tocs_view)] | false    | none         | none                                                 |
| » view_name       | string                           | false    | none         | View name                                            |
| » view_type       | string                           | false    | none         | View type                                            |
| » ispopulated     | boolean                          | false    | none         | Determines whether the view is populated.            |
| » view_owner      | string                           | false    | none         | View owner                                           |
| » definition      | string                           | false    | none         | View definition                                      |
| » tablespace_name | string                           | false    | none         | View tablespace                                      |
| » schema_name     | string                           | false    | none         | View schema                                          |
| » database_name   | string                           | false    | none         | View database                                        |
| » server_id       | integer                          | false    | none         | View server ID                                       |
| » recorded_time   | string                           | false    | none         | Specifies when view was first detected by PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_view_{view_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/{view_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/{view_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/view/{view_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/view/{view_name}`

*Retrieve the properties of views residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_view_{view_name}-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| view_name    | path   | string  | true     | none                   |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "view_name": "string",
  "view_type": "string",
  "ispopulated": true,
  "view_owner": "string",
  "definition": "string",
  "tablespace_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "string"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_view_{view_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                        |
| ------ | ------------------------------------------------------- | ----------- | ----------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [View](schemas.mdx#tocs_view) |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_function_`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/ \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/function/`

*Retrieve the list of properties of functions residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_function_-parameters"></span>

### Parameters



| Name         | In     | Type    | Required | Description            |
| ------------ | ------ | ------- | -------- | ---------------------- |
| sid          | path   | integer | true     | Server ID              |
| db_name      | path   | string  | true     | Database name          |
| schema_name  | path   | string  | true     | Schema name            |
| X-Auth-Token | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
[
  {
    "function_name": "string",
    "function_type": "string",
    "return_type": "string",
    "arg_types": [
      "string"
    ],
    "function_binary": "string",
    "extension_name": "string",
    "package_name": "string",
    "schema_name": "string",
    "database_name": "string",
    "server_id": 0,
    "recorded_time": "2019-08-24T14:15:22Z"
  }
]
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_function_-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema |
| ------ | ------------------------------------------------------- | ----------- | ------ |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | Inline |

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_function_-responseschema"></span>

### Response Schema



Status Code **200**

| Name              | Type                                     | Required | Restrictions | Description                                              |
| ----------------- | ---------------------------------------- | -------- | ------------ | -------------------------------------------------------- |
| *anonymous*       | \[[Function](schemas.mdx#tocs_function)] | false    | none         | none                                                     |
| » function_name   | string                                   | false    | none         | Function name                                            |
| » function_type   | string                                   | false    | none         | Function type                                            |
| » return_type     | string                                   | false    | none         | Function return type                                     |
| » arg_types       | [string]                                 | false    | none         | Function argument types                                  |
| » function_binary | string                                   | false    | none         | none                                                     |
| » extension_name  | string                                   | false    | none         | none                                                     |
| » package_name    | string                                   | false    | none         | Function package name                                    |
| » schema_name     | string                                   | false    | none         | Function schema                                          |
| » database_name   | string                                   | false    | none         | Function database name                                   |
| » server_id       | integer                                  | false    | none         | Function server id                                       |
| » recorded_time   | string(date-time)                        | false    | none         | Specifies when function was first detected by PEM agent. |

!!! info

    This operation does not require authentication




## `get__server_{sid}_database_{db_name}_schema_{schema_name}_function_{function_name}`

**Code samples**

<TabContainer syncKey="language">

<Tab title="cURL">

```shell
# You can also use wget
curl -X GET https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/{function_name} \
  -H 'Accept: application/json' \
  -H 'X-Auth-Token: string'

```

</Tab>

<Tab title="Python">

```python
import requests
headers = {
  'Accept': 'application/json',
  'X-Auth-Token': 'string'
}

r = requests.get('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/{function_name}', headers = headers)

print(r.json())

```

</Tab>

<Tab title="JavaScript">

```javascript

const headers = {
  'Accept':'application/json',
  'X-Auth-Token':'string'
};

fetch('https://PEM-SERVER-IP/pem/api/v7/server/{sid}/database/{db_name}/schema/{schema_name}/function/{function_name}',
{
  method: 'GET',

  headers: headers
})
.then(function(res) {
    return res.json();
}).then(function(body) {
    console.log(body);
});

```

</Tab>

</TabContainer>

`GET /server/{sid}/database/{db_name}/schema/{schema_name}/function/{function_name}`

*Retrieve the properties of functions residing in a schema for a particular database of a managed server.*

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_function_{function_name}-parameters"></span>

### Parameters



| Name          | In     | Type    | Required | Description            |
| ------------- | ------ | ------- | -------- | ---------------------- |
| sid           | path   | integer | true     | Server ID              |
| db_name       | path   | string  | true     | Database name          |
| schema_name   | path   | string  | true     | Schema name            |
| function_name | path   | string  | true     | none                   |
| X-Auth-Token  | header | string  | true     | Token of authorization |

**Example responses**

<Details summary="200 Response">

```json
{
  "function_name": "string",
  "function_type": "string",
  "return_type": "string",
  "arg_types": [
    "string"
  ],
  "function_binary": "string",
  "extension_name": "string",
  "package_name": "string",
  "schema_name": "string",
  "database_name": "string",
  "server_id": 0,
  "recorded_time": "2019-08-24T14:15:22Z"
}
```

</Details>

<span id="get__server_{sid}_database_{db_name}_schema_{schema_name}_function_{function_name}-responses"></span>

### Responses



| Status | Meaning                                                 | Description | Schema                                |
| ------ | ------------------------------------------------------- | ----------- | ------------------------------------- |
| 200    | [OK](https://tools.ietf.org/html/rfc7231#section-6.3.1) | Status 200  | [Function](schemas.mdx#tocs_function) |

!!! info

    This operation does not require authentication




<span id="edb-postgres-enterprise-manager-rest-apis-monitored-object-status"></span>
